Add static files support

--- a/src/theme/layout.hbs
+++ b/src/theme/layout.hbs
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="description" content="{{description}}">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" type="text/css" href="/css/index.css">
   <title>{{title}} - {{name}}</title>
 </head>
 <body>
@@ -14,13 +15,13 @@
     </div>
   </div>
   <div class="container">
-    <div id="header">
+    <div id="header" class="header">
       {{> _header ~}}
     </div>
-    <article id="article">
+    <article id="article" class="article">
       {{> _article ~}}
     </article>
-    <div id="footer">
+    <div id="footer" class="footer">
       {{> _footer ~}}
     </div>
   </div>
