--- a/src/theme/layout.idx.hbs
+++ b/src/theme/layout.idx.hbs
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <meta name="description" content="{{description}}">
   <meta name="viewport" content="width=device-width">
+  <link rel="stylesheet" type="text/css" href="/css/index.css">
   <title>{{title}}</title>
 </head>
 <body>
