--- a/src/theme/_article.hbs
+++ b/src/theme/_article.hbs
@@ -1,8 +1,8 @@
 <header>
-  <h2 class="title">{{title}}</h2>
+  <h2 class="title">{{article.title}}</h2>
 </header>
 <div class="content">
-  {{content}}
+  {{article.content}}
 </div>
 <footer>
 </footer>
