--- a/src/theme/_article.hbs
+++ b/src/theme/_article.hbs
@@ -1,5 +1,5 @@
 <header>
-  <h2 class="title">{{article.title}}</h2>
+  <h2 class="article-title">{{article.title}}</h2>
 </header>
 <div class="content">
   {{article.content}}
