--- a/src/theme/headline.hbs
+++ b/src/theme/headline.hbs
@@ -1,7 +1,5 @@
-<li>
-  <a href="{{article.slug}}"><h3>{{article.title}}</h3></a>
-  <span>{{article.date}}</span>
-  {{#if article.description}}
-  <p>{{article.description}}</p>
-  {{/if}}
-</li>
+<a class="title" href="{{article.slug}}"><h3>{{article.title}}</h3></a>
+<span class="date">{{article.date}}</span>
+{{#if article.description}}
+<p class="description">{{article.description}}</p>
+{{/if}}
