Update colors of pre tag in default theme

--- a/src/theme/static/css/index.css
+++ b/src/theme/static/css/index.css
@@ -82,8 +82,8 @@ pre {
 }
 
 pre {
-  color: #f3f3f3;
-  background-color: #222222;
+  color: #d3d0c8;
+  background-color: #2d2d2d;
   border-radius: 0.168rem;
   display: block;
   font-size: .8rem;
